fix flex spacing between ack checkbox and ack text

--- a/src/ui/sass/modules/_QuestionSubmission.scss
+++ b/src/ui/sass/modules/_QuestionSubmission.scss
@@ -140,6 +140,11 @@
 
     border-top: $question-submission-border;
 
+    &-acknowledgement
+    {
+      display: flex;
+    }
+
     &-ackCheckboxInput
     {
       margin-right: $base-spacing / 2;
